<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_locations"
        android:icon="@drawable/ic_locations"
        android:title="@string/title_locations" />

    <item
        android:id="@+id/navigation_path"
        android:icon="@drawable/ic_temi_path"
        android:title="@string/title_path" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add"
        android:title="@string/title_add_task" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_Tasks"
        android:icon="@drawable/ic_list_task"
        android:title="@string/title_tasks" />

</menu>